--- a/cmu.ds.lab2/bin/.gitignore
+++ b/cmu.ds.lab2/bin/.gitignore
@@ -1,20 +1,7 @@
-/LocateSimpleRegistry.class
-/NameServer.class
-/NameServerImpl.class
-/RORtbl.class
-/RemoteObjectRef.class
-/SimpleRegistry.class
-/SimpleRegistryServer.class
-/client/
-/messageformats/
-/registry/
-/server/
-/testLookup.class
-/testRebind.class
-/yourRMI.class
-/CommModule.class
 /communication/
-/given_content/
-/given_by_kesden/
-/test/
+/registry/
 /core/
+/server/
+/example1/
+/given_by_kesden/
+/client/
