code cleaning step 1

--- a/cmu.ds.lab2/bin/.gitignore
+++ b/cmu.ds.lab2/bin/.gitignore
@@ -1,11 +1,11 @@
-/communication/
-/registry/
-/core/
-/server/
-/example1/
-/given_by_kesden/
+/test1/
+/test2/
+/test3/
 /client/
-/test/
+/communication/
+/core/
+/example1/
 /given_by_prof/
-/example2/
-/diagrams/
+/registry/
+/server/
+/test/
